src/objects/State_Report__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Input form to capture individual sections of State Report</description>
    <fields>
        <fullName>Approval_Queue__c</fullName>
        <description>ITA Business Unit</description>
        <inlineHelpText>Select the ITA business unit that is the owner of this content.</inlineHelpText>
        <label>Approval Queue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Industry &amp; Analysis</fullName>
                    <default>true</default>
                    <label>Industry &amp; Analysis</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Atom__c</fullName>
        <description>Body of an Article</description>
        <inlineHelpText>This rich-text area is where the body of your content should be placed. The content should not deviate from the overall theme and should stand on its own as a reliable source of information. Otherwise, a new topic should be created.</inlineHelpText>
        <label>Atom</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Published_Date__c</fullName>
        <formula>TODAY() - DATEVALUE( LastPublishedDate )</formula>
        <label>Days Since Last Published Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Draft_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag the draft version as ready for approval</description>
        <inlineHelpText>In order to submit this Atom for approval, this box must be checked.</inlineHelpText>
        <label>Draft Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <description>Internal Comments</description>
        <inlineHelpText>Add any internal comments needed.</inlineHelpText>
        <label>Internal Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Level_0__c</fullName>
        <label>Level 0</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>State Report</fullName>
                    <default>true</default>
                    <label>State Report</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_1__c</fullName>
        <description>Related Section of the State Report</description>
        <inlineHelpText>Choose the section within your content is associated with.</inlineHelpText>
        <label>Level 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exporting Companies</fullName>
                </value>
                <value>
                    <fullName>Foreign Investment</fullName>
                </value>
                <value>
                    <fullName>Free Trade Agreements</fullName>
                </value>
                <value>
                    <fullName>Jobs Supported by Exports</fullName>
                </value>
                <value>
                    <fullName>Metropolitan Exports</fullName>
                </value>
                <value>
                    <fullName>State Export Overview</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level_2__c</fullName>
        <label>Level 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_Title__c</fullName>
        <description>Title for Mobile View</description>
        <inlineHelpText>Title for Mobile View</inlineHelpText>
        <label>Mobile Title</label>
        <length>37</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_URL__c</fullName>
        <description>Full Public URL for State Report Articles</description>
        <formula>HYPERLINK($Label.export_gov&amp;&quot;/article?id=&quot;&amp;UrlName, $Label.export_gov&amp;&quot;/article?id=&quot;&amp;UrlName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Public URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>References__c</fullName>
        <description>Article References</description>
        <inlineHelpText>If there are any references that were used during the writing of the content, they can be highlighted here. The rich text editor allows for formatting and link creation.</inlineHelpText>
        <label>References (Public)</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup field to relate articles to State Reports</description>
        <inlineHelpText>Type a keyword, such as country name and click the magnifying glass to search available Publications.</inlineHelpText>
        <label>Series</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Series__c.Type__c</field>
                <operation>equals</operation>
                <value>State Report</value>
            </filterItems>
            <infoMessage>Search by State to locate a State Report</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Series__c</referenceTo>
        <relationshipLabel>State Reports Articles</relationshipLabel>
        <relationshipName>State_Reports</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Tracks the stages of an Article through an approval process.</description>
        <inlineHelpText>Stage is the phase of the process that your content is in.</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Video__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A Video component to display along with this article.</inlineHelpText>
        <label>Video</label>
        <referenceTo>Content__c</referenceTo>
        <relationshipLabel>State Reports</relationshipLabel>
        <relationshipName>State_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>State Report</label>
    <pluralLabel>State Reports</pluralLabel>
    <validationRules>
        <fullName>Required_Level_1</fullName>
        <active>true</active>
        <description>Level 1 is mandatory</description>
        <errorConditionFormula>ISBLANK(TEXT(Level_1__c))</errorConditionFormula>
        <errorMessage>Please pick Level 1 (Mandatory field)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Mobile_Title</fullName>
        <active>true</active>
        <description>Mobile Title Needed if Article Title is larger than 37 characters</description>
        <errorConditionFormula>AND( (LEN(Title)&gt;37) , ISBLANK( Mobile_Title__c ) )</errorConditionFormula>
        <errorMessage>Please enter the Mobile Title (Article Title is too large for Mobile view)</errorMessage>
    </validationRules>
</CustomObject>